Fix th not inheriting text-align

--- a/styles/_tables.scss
+++ b/styles/_tables.scss
@@ -1,3 +1,8 @@
+// TODO: https://github.com/twbs/bootstrap/pull/22858
+th {
+	text-align: inherit;
+}
+
 @mixin table-row-variant-custom($state, $background, $color) {
 	.table-#{$state} {
 		color: $color;
